# SpeechToText-Windows

./: .gitignore  README.md  build.bat  installer.iss  pyproject.toml  requirements.txt  speechtotext.spec
.github/workflows/: build.yml
speechtotext/: __init__.py  editor.py  main.py  settings.py
